# python

18_sqlalchemy_relationships/: docker-compose.yml  main.py  requirements.txt  rqr.txt
31_orm_and_debugtools/: pyproject.toml
31_orm_and_debugtools/some_shop/: db.sqlite3
31_orm_and_debugtools/some_shop/shop/: admin.py  models.py  urls.py  views.py
31_orm_and_debugtools/some_shop/shop/migrations/: 0002_category.py  0006_alter_product_category.py
31_orm_and_debugtools/some_shop/shop/templates/shop/: categories_with_products_tree.html  index.html
31_orm_and_debugtools/some_shop/some_shop/: settings.py  urls.py
36_django_testing/: pyproject.toml
36_django_testing/some_shop/: docker-compose.yml
36_django_testing/some_shop/shop/: forms.py  models.py  urls.py  views.py
36_django_testing/some_shop/shop/fixtures/: category-fixtures.json  product-fixtures.json
36_django_testing/some_shop/shop/migrations/: 0004_product_category.py  0012_category_archived.py
36_django_testing/some_shop/shop/templates/email/: order-updated.html
36_django_testing/some_shop/shop/templates/shop/: category_detail.html  category_form.html  index.html
36_django_testing/some_shop/shop/tests/: test_categories.py  test_index_views.py  test_products.py  test_tasks_info.py
36_django_testing/some_shop/site_auth/: tasks.py  tests.py
36_django_testing/some_shop/site_auth/templates/email/: new-reg.html
36_django_testing/some_shop/site_auth/templates/site_auth/: me.html
36_django_testing/some_shop/some_shop/: settings.py
36_django_testing/some_shop/templates/: base.html
(+89 files in other folders)
